--- a/Map/build.gradle
+++ b/Map/build.gradle
@@ -7,7 +7,6 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -34,5 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/BaiduLBS_Android.jar')
-    implementation files('libs/gson-2.2.1.jar')
+    compile files('libs/gson-2.2.1.jar')
 }
