--- a/Map/build.gradle
+++ b/Map/build.gradle
@@ -20,7 +20,7 @@ android {
 
     sourceSets {
         main {
-            jniLibs.srcDir 'libs'
+            jniLibs.srcDirs=['libs']
         }
     }
 
