--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.shenl.BaiDuMap">
 
     <application
-        android:name=".application.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,9 +19,9 @@
             </intent-filter>
         </activity>
 
-        <meta-data
+        <!--<meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="pSqBOjXUpjXsssYsf57XP33d7Vnb7zRt" />
+            android:value="pSqBOjXUpjXsssYsf57XP33d7Vnb7zRt" />-->
     </application>
 
 </manifest>
